--- a/ggplot-basics/binder/Dockerfile
+++ b/ggplot-basics/binder/Dockerfile
@@ -1,3 +1,10 @@
 FROM rocker/binder:3.6.3
 
-COPY --chown=rstudio:rstudio ./ggplot-basics/ ${HOME}
+ARG NB_USER
+
+USER root
+RUN Rscript -e 'install.packages("dslabs", version="0.7.3")' \
+  && rm -rf /tmp/downloaded_packages
+USER ${NB_USER}
+
+COPY --chown=${NB_USER} ./ggplot-basics/ ${HOME}
