Packages in a given rocker/binder:3.6.3 should be pinned to a specific mran snapshot, so no need to specify version

--- a/ggplot-basics/binder/Dockerfile
+++ b/ggplot-basics/binder/Dockerfile
@@ -3,7 +3,7 @@ FROM rocker/binder:3.6.3
 ARG NB_USER
 
 USER root
-RUN Rscript -e 'install.packages("dslabs", version="0.7.3")' \
+RUN install2.r dslabs \
   && rm -rf /tmp/downloaded_packages
 USER ${NB_USER}
 
